<resources>
    <string name="app_name">FinalProject</string>
    <string name="screenName">Account Creation</string>
    <string name="lblUsername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="lblPasswordConfirm">Password Confirmation</string>
    <string name="usernameHint">Enter a username</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="passwordError">Password Confirmation does not match password</string>
    <string name="createScreen">Character Creation</string>
    <string name="lblName">Name:</string>
    <string name="lblRace">Race:</string>
    <string name="lblClass">Class:</string>
    <string-array name="raceGroup">
        <item>Human</item>
        <item>Elven</item>
        <item>Orcish</item>
        <item>Dwarven</item>
    </string-array>
    <string name="radioWarrior">Warrior</string>
    <string name="radioAssassin">Assassin</string>
    <string name="radioMage">Mage</string>
    <string name="radioRanger">Ranger</string>
    <string name="btnCharacter">Begin Adventure</string>

    <string name="showClass">Class:</string>
    <string name="chosenClass"></string>
    <string name="showName">Name:</string>
    <string name="chosenName"></string>
    <string name="scenarioText"></string>
    <string name="btnContinue">Next </string>
    <string name="back">Back</string>

    <string name="option1">Call for the guards</string>
    <string name="option2">Attempt to break lock</string>
    <string name="option3">Look out of the window</string>
    <string name="option4">Go back to sleep</string>
    <string name="choose">Choose an action:</string>
</resources>