<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3DD71"
    tools:context=".CharacterCreation">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/createScreen"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/lblName"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/lblRace"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/lblClass"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/idCharName"
        android:layout_width="203dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#272525"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/idRaceSpinner"
        android:layout_width="174dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:backgroundTint="#CD2C2B2B"
        android:entries="@array/raceGroup"
        android:foregroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/idCharName" />

    <RadioGroup
        android:id="@+id/classGroup"
        android:layout_width="216dp"
        android:layout_height="96dp"
        android:layout_marginTop="24dp"
        android:checkedButton="@id/idWarrior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/idRaceSpinner">

        <RadioButton
            android:id="@+id/idWarrior"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/radioWarrior"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/idMage"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/radioMage"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/idRanger"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/radioRanger"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/idAssassin"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/radioAssassin"
            android:textColor="#000000" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAdventure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/btnCharacter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>