<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/screenName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:gravity="center_vertical"
        android:text="@string/lblUsername"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:gravity="center_vertical"
        android:text="@string/lblPassword"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:text="@string/lblPasswordConfirm"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/idAccountBtn"
        android:layout_width="140dp"
        android:layout_height="67dp"
        android:layout_marginTop="68dp"
        android:text="@string/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPasswordInput2" />

    <EditText
        android:id="@+id/idUsernameInput"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/idPasswordInput"
        android:layout_width="151dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/idUsernameInput" />

    <EditText
        android:id="@+id/idPasswordInput2"
        android:layout_width="151dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/idPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>